Spacing fix

--- a/assets/css/3-sections/index/_samples.sass
+++ b/assets/css/3-sections/index/_samples.sass
@@ -2,9 +2,8 @@
 	@include greyBoxShade 
 	table
 		text-align: center
-.sample
-	padding: 2%
 .sample-wrap
+	padding: 0px 2% 2% 2%
 	+clearfix
 .thumb-wrap
 	margin: 0px auto
